# fastagency

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  index.html  main_.py  models_.py  nats-docker-compose.yaml  nats_server.conf  package-lock.json  package.json  playwright.config.ts  playwright.coverage.config.ts  playwright.gunicorn.config.ts  playwright.llm-sans.config.ts  playwright.llm.config.ts  pyproject.toml  schema.prisma  versions.json  wasp_schema.prisma
.devcontainer/: build_devcontainers.py  devcontainer.env  devcontainer.json  docker-compose.yml  nats_server.conf  setup-ag2.sh  setup-autogen-04dev.sh  setup.sh
.devcontainer/ag2-python-3.10/: devcontainer.json
.devcontainer/ag2-python-3.11/: devcontainer.json
.devcontainer/ag2-python-3.12/: devcontainer.json
.devcontainer/ag2-python-3.9/: devcontainer.json
.devcontainer/autogen-04dev-python-3.10/: devcontainer.json  docker-compose.yml
.devcontainer/autogen-04dev-python-3.11/: devcontainer.json  docker-compose.yml
.devcontainer/autogen-04dev-python-3.12/: devcontainer.json  docker-compose.yml
.devcontainer/autogen-04dev-python-3.9/: devcontainer.json  docker-compose.yml
.devcontainer/autogen-python-3.10/: devcontainer.json
.devcontainer/autogen-python-3.11/: devcontainer.json
.devcontainer/autogen-python-3.12/: devcontainer.json
.devcontainer/autogen-python-3.9/: devcontainer.json
.devcontainer/python-3.10/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.11/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.12/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.13/: devcontainer.json  docker-compose.yml
.devcontainer/python-3.9/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check-broken-links-in-docs.yaml  check-certs-expiry.yml  deploy-docs.yaml  deploy-nats.yaml  deploy.yaml  docker-cleanup.yml  enforcer.yaml  maintenance-mode-switch.yml  pipeline.yaml  playwright.yml  publish-coverage.yml  release_pypi.yaml  test-playwright.yaml  test.yaml  update-cron-script.yml  update-release-notes.yaml
0.0/: 404.html  index.html  objects.inv  sitemap.xml
0.0/fastagency/: index.html
0.0/getting-started/: index.html
0.0/release/: index.html
0.0/search/: search_index.json
0.0/tutorial/: index.html
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/contributing/: index.html
0.1/getting-started/: index.html
0.1/release/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.8/: index.html  objects.inv  sitemap.xml
app/: .gitignore  main.wasp  package-lock.json  package.json  pretend_nats_client.ts  schema.prisma  tailwind.config.cjs  tsconfig.json
auth_callout/: .gitignore  .prettierrc.json  Dockerfile  package.json  pnpm-lock.yaml  run-auth-callout.sh  tsconfig.json  tsconfig.settings.json
docs/: README.md  create_api_docs.py  create_cli_docs.py  docs.py  expand_markdown.py  mkdocs.yml  update_releases.py
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/: README.md  fly.toml  pyproject.toml
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/.devcontainer/: devcontainer.env  docker-compose.yml
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/deployment/firebase/: allowed_users.yaml
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/docker/: Dockerfile
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/docker/content/: nginx.conf.template  run_fastagency.sh
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/my_fastagency_app/: workflow.py
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/my_fastagency_app/deployment/: main_1_fastapi.py  main_2_mesop.py
docs/docs_src/getting_started/basic_auth/fastapi/my_fastagency_app/scripts/: check-registered-app.sh  run_docker.sh  static-analysis.sh
docs/docs_src/getting_started/fastapi/my_fastagency_app/: fly.toml  pyproject.toml
docs/docs_src/getting_started/fastapi/my_fastagency_app/.devcontainer/: devcontainer.json
docs/docs_src/getting_started/fastapi/my_fastagency_app/.github/workflows/: test.yml
docs/docs_src/getting_started/fastapi/my_fastagency_app/docker/: Dockerfile  nginx.conf.template
docs/docs_src/getting_started/fastapi/my_fastagency_app/docker/content/: run_fastagency.sh
docs/docs_src/getting_started/fastapi/my_fastagency_app/my_fastagency_app/deployment/: main_2_mesop.py
docs/docs_src/getting_started/fastapi/my_fastagency_app/my_fastagency_app/local/: main_console.py  main_mesop.py
docs/docs_src/getting_started/fastapi/my_fastagency_app/tests/: test_workflow.py
e2e/: README.md  example.spec.ts  playwright.base.config.ts  playwright.coverage.cfg
examples/: autogen.ipynb  fixtures.py
fastagency/: __about__.py  __init__.py  __main__.py  app.py  base.py  exceptions.py  helpers.py  logging.py  messages.py
javascript/: basic_auth_component.js  counter_component.js  firebase_auth_component.js  username_password_auth_component.js  wakeup_component.js
latest/: 404.html  index.html  objects.inv  sitemap.xml
scripts/: build-docs-pre-commit.sh  build-docs.sh  build_devcontainers.py  ci-check-certs.sh  cron-check-certs.sh  deploy-auth-callout.sh  deploy-nats.sh  deploy-node.sh  deploy.sh  deploy_nats.sh  devcontainer-build-pre-commit.sh  lint-pre-commit.sh  lint.sh  prisma-generate-migration.sh  publish.sh  run-server.sh  static-analysis.sh  static-pre-commit.sh  test-cov.sh  test-no-llm-pre-commit.sh  test-no-llm.sh  test.sh
templates/: main.jinja2
tests/: conftest.py  helpers.py  test_autogen.py  test_conftest.py  test_helpers.py  test_import.py  test_messages.py  test_nats.py  test_saas_app_generator.py
(+3177 files in other folders)
