[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastagency"
description = "FastAgency: a repository of open-source AI agents"
readme = "README.md"
authors = [
    { name = "airt", email = "info@airt.ai" },
]

keywords = ["autogen", "multi-agent", "LLM", "AI", "autonomous agents"]

requires-python = ">=3.9"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]

dynamic = ["version"]

dependencies = [
    "pyautogen[anthropic,together]==0.2.32",
    "faststream[nats]>=0.5.10,<0.6",
    "typing-extensions>=4.8.0,<5",
    "pydantic>=2.3,<3",
    "fastapi==0.111.1",
    "prisma>=0.13.1,<0.14",
    "fastapi-code-generator==0.5.1",
    "asyncer==0.0.7",
    "markdownify==0.13.1", # Needed by autogen.WebSurferAgent but not included
    "httpx==0.27.0",
    "python-weather==2.0.3",  # should be removed when we move API to another project
    "together>=1.2.1,<2",
]

[project.optional-dependencies]
# public distributions

server = [
    "uvicorn==0.30.1",
]

# dev dependencies
devdocs = [
    "mkdocs-material==9.5.29",
    "mkdocs-static-i18n==1.2.3",
    "mdx-include==1.4.2",
    "mkdocstrings[python]==0.25.1",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.2.6",
    "mike==2.1.2",  # versioning
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-macros-plugin==1.0.5",  # includes with variables
    "mkdocs-glightbox==0.4.0",  # img zoom
    "pillow==10.3.0",
    "cairosvg==2.7.1",
    "requests",  # do not pin it
]

lint = [
    "types-PyYAML",
    "types-setuptools",
    "types-ujson",
    "types-Pygments",
    "types-docutils",
    "mypy==1.11.1",
    "ruff==0.5.2",
    "pyupgrade-directories==0.3.0",
    "bandit==1.7.9",
    "semgrep==1.78.0",
    "pytest-mypy-plugins==3.1.2",
]

test-core = [
    "coverage[toml]==7.6.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "dirty-equals==0.7.1.post0",
    "pytest-rerunfailures==14.0",
]

testing = [
    "fastagency[test-core]",
    "fastagency[server]", # Uvicorn is needed for testing
    "pydantic-settings==2.3.4",
    "PyYAML==6.0.1",
    "watchfiles==0.22.0",
    "email-validator==2.2.0",
]

dev = [
    "fastagency[server,lint,testing,devdocs]",
    "pre-commit==3.7.1",
    "detect-secrets==1.5.0",
    "asyncer==0.0.7",
]

[project.urls]
Homepage = "https://docs.fastagency.ai/latest/"
Documentation = "https://docs.fastagency.airt.ai/latest/"
Tracker = "https://github.com/airtai/fastagency/issues"
Source = "https://github.com/airtai/fastagency"
Discord = "https://discord.gg/qFm6aSqq59"

[project.scripts]
# fastagency = "fastagency.__main__:cli"

[tool.hatch.version]
path = "fastagency/__about__.py"

[tool.hatch.build]
skip-excluded-dirs = true
exclude = [
    "/tests",
    "/docs",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["fastagency", "templates"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"scripts" = "fastagency/templates"

[tool.mypy]

files = ["fastagency", "tests"]

strict = true
python_version = "3.9"
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = [
    "pydantic.mypy",
]

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.ruff]
fix = true
line-length = 88
# target-version = 'py39'
include = ["fastagency/**/*.py", "fastagency/**/*.pyi", "tests/**/*.py", "docs/**/*.py", "pyproject.toml"]
exclude = ["docs/docs_src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W",     # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90",   # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N",     # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D",     # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I",     # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F",     # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",    # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",     # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",     # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20",   # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM",   # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",    # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH",   # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF",   # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF",  # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
]

ignore = [
    "E501",  # line too long, handled by formatter later
    "D100", "D101", "D102", "D103", "D104",
#     "C901",  # too complex
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -m 'not slow'"
testpaths = [
    "tests",
]
markers = [
    "slow",
    "all",
    "db",
    "nats",
    "anthropic",
    "azure_oai",
    "openai",
    "togetherai",
    "llm: mark test for use with LLMs",
    "flaky: mark test as flaky",
]

[tool.coverage.run]
parallel = true
branch = true
concurrency = [
    "multiprocessing",
    "thread"
]
source = [
    "docs/docs_src",
    "examples",
    "fastagency",
#    "tests",
]
context = '${CONTEXT}'
omit = [
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "miss"

exclude_also = [
    "if __name__ == .__main__.:",
    "self.logger",
    "def __repr__",
    "lambda: None",
    "from .*",
    "import .*",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    'raise AssertionError',
    'logger\..*',
    "pass",
    '\.\.\.',
]
omit = [
    '*/__about__.py',
    '*/__main__.py',
    '*/__init__.py',
]

[tool.bandit]

[tool.black]

line-length = 88

extend-exclude = """
/(
    docs/docs_src
    | some_other_dir
)/
"""
